Ext5/adminNetworkPolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-admin-frontend-to-backend
spec:
  policyTypes:
    - Ingress
  podSelector:
    matchLabels:
      role: admin-back-end-api
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: admin-front-end
