Ext5/denyOtherPolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-other
spec:
  policyTypes:
    - Ingress
  podSelector: {}
