Ext5/networkPolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-frontend-to-backend
spec:
  policyTypes:
    - Ingress
  podSelector:
    matchLabels:
      role: back-end-api
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: front-end
